# gengine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  run-debug.bat  run-release.bat
.github/workflows/: cmake-multi-platform.yml  codeql.yml
docs/: Doxyfile
executables/gShaderCompiler/: CMakeLists.txt
executables/gShaderCompiler/src/: main.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
plugins/: CMakeLists.txt  Plugin.h  PluginLoader.cpp  PluginLoader.hpp  PluginMacros.h  plugin_interface.h
plugins/MyPlugin/: plugin.cpp
plugins/plugins/MyPlugin/: plugin.cpp
plugins/wrappers/: PluginImGui.cpp  PluginImGui.hpp
src/: CMakeLists.txt  dll.h  gengine.h  gengine_internals.h  main.cpp
src/classes/: Logger.cpp  Logger.hpp  Node.cpp  Node.hpp
src/classes/data/: Color.cpp  Color.hpp  Color3.cpp  Color3.hpp  ColorRGB.cpp  ColorRGB.hpp
src/classes/file/internal/: DownloadFile.cpp  DownloadFile.h  InternetFiles.cpp  InternetFiles.h
src/classes/math/vector/: Vector2.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp
src/internal/: ProgramRunner.cpp  ProgramRunner.hpp  Window.cpp  Window.hpp
src/internal/renderer/: EBO.cpp  EBO.hpp  Shader.cpp  Shader.hpp  VAO.cpp  VAO.hpp  VBO.cpp  VBO.hpp
src/resources/shaders/default/: fragment.frag  vertex.vert
tests/: CMakeLists.txt  vector_test.cc
tests/data/: color.cc
tests/math/: vector2.cc  vector3.cc
